Align profile cards correctly

--- a/app/styles/components/_profile.scss
+++ b/app/styles/components/_profile.scss
@@ -23,7 +23,7 @@
       @extend %grid-column-large-2;
       @extend %grid-column-small-3;
 
-      padding-right: 0 !important;
+      text-align: right;
     }
 
     .details {
